[b][color=orange]v4.08[/color], 21.01.2019[/b][list]
[*]Remove some code from the Collection Skin to prevent a taint.
[*]Remove RealmInfo from the Tooltip. Go away...
[*]Added back the Media section to change some additional fonts.
[*]More work on my Armory. Slot Gradiation, socket links, etc.[/list]

[b][color=orange]v4.07[/color], 11.01.2019[/b][list]
[*]Fixed an error CombatFeedBack Text if UnitFrames are disabled.
[*]Fixed an error with LSM calls.
[*]Some NamePlateAuras fine tuning.
[*]The Notification dont show now if you are in a dungeon/raid etc.
[*]Added an own Armory (light) Mode.
[*]Updated some skins.[/list]

[b][color=orange]v4.06[/color], 08.01.2019[/b][list]
[*]Fixed an error in ItemSocketing skin.
[*]Added back my ShadowOverlay.
[*]Adjust font size for ScrappingMachine & FlyoutButton iLvL.
[*]Update the Minimap Glow appearance.
[*]Update RealmInfo.
[*]Simplify the NamePlate Auras.
[*]Change the default position for the Combat State.[/list]

[b][color=orange]v4.05[/color], 27.12.2018[/b][list]
[*]Various skin adjustments & fixes.
[*]Use a nice glow around RaidBuffReminder & Buff Reminder.
[*]Update Minimap Coords Position.
[*]Removed my ShadowOverlay.
[*]Added a CombatFeedBack Text to the UF's.[/list]

[b][color=orange]v4.04[/color], 13.12.2018[/b][list]
[*]Fixed an error in the LFGList skin.
[*]Updated SpellBook skin.
[*]Use my arrows on the StackSplitFrame again.
[*]Disable my ShadowOverlay by default for now.[/list]

[b][color=orange]v4.03[/color], 11.12.2018[/b][list]
[*]Update new ChatBar position and size.
[*]Removed Enhanced FriendsList. Get ProjectAzilroka.
[*]Fix Keystone Info tooltip.
[*]Added iLvL on ScrappingMachine & EquipFlyout Buttons.
[*]Added Buff Reminder Module.[/list]

[b][color=orange]v4.02[/color], 21.11.2018[/b][list]
[*]Fixed an error in one of my ClassColor function. #38
[*]Fixed an error with DeJaCharacterStats. #39[/list]

[b][color=orange]v4.01[/color], 20.11.2018[/b][list]
[*]Small DPS/Tank Layout adjustments.