@@ -1,3 +1,8 @@
+[b][color=orange]v4.09[/color], 26.01.2019[/b][list]
+[*]Dont load the AzeriteButtons if the ElvUI Character Skin is disabled.
+[*]Add a waring texture for missing gems.
+[*]Update ls_Toast skin and profile.[/list]
+
 [b][color=orange]v4.08[/color], 21.01.2019[/b][list]
 [*]Remove some code from the Collection Skin to prevent a taint.
 [*]Remove RealmInfo from the Tooltip. Go away...
